分配模块任务
Signed-off-by: yl <1620833589@qq.com>

--- a/KuGou/src/main/webapp/index.html
+++ b/KuGou/src/main/webapp/index.html
@@ -1058,26 +1058,21 @@
 
 							</ul>
 							<ul style="display: none; z-index: 1;">
-
-
-								<li
-									data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;9CF5D5168D93220278DF3F7BB07BCE87&quot;,&quot;time&quot;:&quot;04:35&quot;,&quot;timeLen&quot;:275000,&quot;Filename&quot;:&quot;Aqours - Daydream Warrior&quot;}">
-									<a href=""> <span class="songName">Aqours - Daydream
-											Warrior</span> <span class="songTime">04:35</span> <span
-										class="icon playBtn icon-play"></span>
+								<li data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;9CF5D5168D93220278DF3F7BB07BCE87&quot;,&quot;time&quot;:&quot;04:35&quot;,&quot;timeLen&quot;:275000,&quot;Filename&quot;:&quot;Aqours - Daydream Warrior&quot;}">
+									<a href=""> <span class="songName">Aqours - Daydream Warrior</span>
+									 <span class="songTime">04:35</span>
+									  <span class="icon playBtn icon-play"></span>
 								</a>
 								</li>
 
-								<li
-									data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;DF86A8960C16C645F587972F23A28FD9&quot;,&quot;time&quot;:&quot;03:52&quot;,&quot;timeLen&quot;:232000,&quot;Filename&quot;:&quot;NMB48 - 僕以外の誰か&quot;}">
+								<li data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;DF86A8960C16C645F587972F23A28FD9&quot;,&quot;time&quot;:&quot;03:52&quot;,&quot;timeLen&quot;:232000,&quot;Filename&quot;:&quot;NMB48 - 僕以外の誰か&quot;}">
 									<a href=""> <span class="songName">NMB48 - 僕以外の誰か</span> <span
 										class="songTime">03:52</span> <span
 										class="icon playBtn icon-play"></span>
 								</a>
 								</li>
 
-								<li
-									data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;AD5A455004BDC79765666E7D544198BF&quot;,&quot;time&quot;:&quot;04:05&quot;,&quot;timeLen&quot;:245000,&quot;Filename&quot;:&quot;中村悠一、内山昂輝、小野賢章 - 無重力フィーバー【WWW.迷糊餐厅 ED】&quot;}">
+								<li data="{&quot;first&quot;:0,&quot;Hash&quot;:&quot;AD5A455004BDC79765666E7D544198BF&quot;,&quot;time&quot;:&quot;04:05&quot;,&quot;timeLen&quot;:245000,&quot;Filename&quot;:&quot;中村悠一、内山昂輝、小野賢章 - 無重力フィーバー【WWW.迷糊餐厅 ED】&quot;}">
 									<a href=""> <span class="songName">中村悠一、内山昂輝、小野賢章 -
 											無重力フィーバー【WWW.迷糊餐厅 ED】</span> <span class="songTime">04:05</span> <span
 										class="icon playBtn icon-play"></span>
