用户的修改
Signed-off-by: yl <1620833589@qq.com>

--- a/KuGou/src/main/webapp/index.html
+++ b/KuGou/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
-<title>酷狗音乐 - 音乐总有新玩法</title>
+<title>音乐 - 音乐总有新玩法</title>
 <!-- <meta itemprop="images"
 	content="http://static.kgimg.com/public/root/images/logo.png"> -->
 <meta name="keywords" content="">
