--- a/KuGou/src/main/webapp/index.html
+++ b/KuGou/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,12 +42,14 @@
 			</h1>
 			<div class="topNav fr">
 				<ul>
-					<li><a target="_blank" href="./emailReg.html">注册</a></li>
-					<li><a href="" class="kuLogin">登录</a><a hidefocus="true"
-						href="http://www.kugou.com/newuc/login/outlogin" class="logout">退出登录</a></li>
 					<li><a target="_blank" href="./server.html">客服中心</a></li>
 					<li><a target="_blank" href="./join.html">招贤纳士</a></li>
 					<li><a target="_blank" href="./VIP.html">会员中心 </a></li>
+					<li><input name="kgusername" placeholder="请输入用户名"/></li>
+					<li><input type="password" name="kguserpwd" placeholder="请输入密码"/></li>
+					<li><a href="" class="userLogin">登录</a><a hidefocus="true"
+						href="http://www.kugou.com/newuc/login/outlogin" class="logout">退出登录</a></li>
+					<li><a target="_blank" href="./emailReg.html">注册</a></li>
 				</ul>
 			</div>
 		</div>
